[gd_scene load_steps=4 format=3 uid="uid://b15064hesdf61"]

[ext_resource type="Script" path="res://inventory/inventory_slot_gui.gd" id="1_hhod6"]
[ext_resource type="Texture2D" uid="uid://dxe4hqw0l3fv7" path="res://assets/inventory/inventorySlot.png" id="1_odgjs"]
[ext_resource type="Script" path="res://inventory/slot_hover.gd" id="3_e3oay"]

[node name="Slot" type="Panel"]
self_modulate = Color(0, 0, 0, 0)
custom_minimum_size = Vector2(100, 100)
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_hhod6")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("1_odgjs")
centered = false
vframes = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = -1.0
offset_right = 95.0
offset_bottom = 96.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="Item" type="Sprite2D" parent="CenterContainer/Panel"]
scale = Vector2(4.5, 4.5)

[node name="Label" type="Label" parent="CenterContainer/Panel"]
custom_minimum_size = Vector2(32, 23)
layout_mode = 0
offset_left = 18.0
offset_top = 13.0
offset_right = 50.0
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "19"

[node name="SlotHover" type="Panel" parent="."]
z_index = 1
layout_mode = 0
offset_left = -221.0
offset_top = 79.0
offset_right = 79.0
offset_bottom = 303.0
script = ExtResource("3_e3oay")

[node name="Title" type="RichTextLabel" parent="SlotHover"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 400.0
offset_bottom = 62.0
scale = Vector2(0.75, 0.75)
theme_override_constants/outline_size = 2
theme_override_font_sizes/normal_font_size = 48
text = "Fire Slime Tears"

[node name="Description" type="RichTextLabel" parent="SlotHover"]
layout_mode = 0
offset_left = 18.0
offset_top = 42.0
offset_right = 392.0
offset_bottom = 187.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/normal_font_size = 48
text = "Heals 50HP. Salty but refreshing."

[node name="Price" type="RichTextLabel" parent="SlotHover"]
layout_mode = 0
offset_left = 24.0
offset_top = 180.0
offset_right = 399.0
offset_bottom = 243.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "Sell Price: 10G [img=32x32
]res://assets/inventory/coin-basic.png[/img] "

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
